@@ -29,6 +29,9 @@
 	<LI>The Xerox XRX comments used the wrong units for the
 	media size, points instead of millimeters.
 
+	<LI>IMG elements with links that use the ALIGN attribute
+	didn't get the links.
+
 </UL>
 
 <H2>Changes in HTMLDOC v1.8.19</H2>
